--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_serializable: ^3.0.0
   flutter_bloc: ^0.20.0
   equatable: ^0.3.0
+  catcher: ^0.3.2
 
 dev_dependencies:
   flutter_test:
